--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Raza 🌙 Knowledge</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -68,8 +68,23 @@
 </div>
 <center>
   <div class="cente">
-    <div class="about">
-      
+    <div class=" about my-5">
+     <h1 class="text-start  my-4  border-bottom border-4 border-black" >
+      ABOUT
+     </h1>
+     <h3 class="text-start my-5 ">Introduction <i class="fa-solid fa-address-card fa-beat-fade" style="color: #5b716a;"></i></h3>
+       <p class="text-start fs-4">
+Imam Ahmad Raza Khan (14th June 1856 – 28th October 1921) was a prominent religious scholar and reformer of the 20th century. He was a distinguished Hanafi jurist, hadith scholar, poet of Na'at, and an expert in both Islamic and rational sciences. He was also the leader of the Qadri Sufi Order and authored numerous works in Arabic, Persian, and Urdu. Some of his most famous writings include his renowned Quran translation "Kanzul Iman", the comprehensive legal work "Fatawa Razawiya", and his famous Na'at collection "Hadaiq Bakhshish".
+<br>
+Imam Ahmad Raza was a staunch defender of taqleed (following scholarly tradition) and the Hanafi school of thought. His scholarly journey led him to benefit from the works of revered scholars like Shah Waliullah and Abdul Haqq Dehlawi in the field of hadith. In fiqh, he was authorized by Sheikh Abdul Rahman Hanfi Makki, whose spiritual lineage traces back to Abdullah ibn Mas'ud.
+<br>
+He played a significant role in advocating the Two-Nation Theory and firmly rejected any form of Hindu-Muslim unity. He warned against such alliances, especially during movements like Tark-e-Muwalat and Khilafat Movement, which, according to him, were in conflict with Islamic principles. Imam Ahmad Raza was also a strong proponent of women's religious education and issued a fatwa prohibiting women from leaving their homes to visit graves.
+<br>
+His works covered a wide range of topics, including legal issues, religious reforms, and even scientific subjects like astronomy and mathematics. Imam Ahmad Raza founded Manzar-e-Islam, an Islamic university in Bareilly, and was instrumental in introducing the Barelvi school of thought, which emphasized love for the Prophet Muhammad (PBUH) and Sufism.
+<br>
+His legacy continues, and he is fondly remembered by titles such as A'la Hazrat, Imam Ahle Sunnat, and Hassan-ul-Hind. Every year, his death anniversary, Yom-e-Raza, is observed with great respect on the 25th of Safar.
+
+</p>   
     </div>
   </div>
 </center>
