--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand fs-2 text-light" href="#" >Imam of Ahl-e-Sunnat</a>
+        <a class="navbar-brand fs-2 text-light" href="#">Imam of Ahl-e-Sunnat</a>
         <ul class="fs-5 navbar-nav mx-5 me-auto mb-2 mb-lg-0 gap-5">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -31,68 +31,226 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Religious Services</a>
+            <a class="nav-link" href="#">Religious Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Books </a>
+            <a class="nav-link" href="#">Books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Beliefs</a>
+            <a class="nav-link" href="#">Beliefs</a>
           </li>
-
         </ul>
       </div>
     </div>
   </nav>
 
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div  class="carousel-item  active">
-      <img src="./00.jpg"   class="d-block w-100" alt="...">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./00.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./2.jpg" class="d-block w-100" alt="...">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="./1.jpg"  class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./2.jpg"  class="d-block w-100" alt="...">
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+
+  <center>
+    <div class="cente">
+      <div class="about my-5">
+        <h1 class="text-start my-4 border-bottom border-4 border-black">ABOUT</h1>
+        <h3 class="text-start bord my-5">Introduction <i class="fa-solid fa-address-card fa-beat-fade"
+            style="color: #5b716a;"></i></h3>
+        <p class="text-start fs-4">
+          Imam Ahmad Raza Khan (14th June 1856 – 28th October 1921) was a prominent religious scholar and reformer of
+          the 20th century. He was a distinguished Hanafi jurist, hadith scholar, poet of Na'at, and an expert in both
+          Islamic and rational sciences. He was also the leader of the Qadri Sufi Order and authored numerous works in
+          Arabic, Persian, and Urdu. Some of his most famous writings include his renowned Quran translation "Kanzul Iman",
+          the comprehensive legal work "Fatawa Razawiya", and his famous Na'at collection "Hadaiq Bakhshish".
+          <span id="dots">...</span><span id="more" style="display:none;">Imam Ahmad Raza was a staunch defender of taqleed (following scholarly
+            tradition) and the Hanafi school of thought. His scholarly journey led him to benefit from the works of
+            revered scholars like Shah Waliullah and Abdul Haqq Dehlawi in the field of hadith. In fiqh, he was authorized
+            by Sheikh Abdul Rahman Hanfi Makki, whose spiritual lineage traces back to Abdullah ibn Mas'ud. He played a
+            significant role in advocating the Two-Nation Theory and firmly rejected any form of Hindu-Muslim unity. He
+            warned against such alliances, especially during movements like Tark-e-Muwalat and Khilafat Movement, which, according
+            to him, were in conflict with Islamic principles. Imam Ahmad Raza was also a strong proponent of women's religious
+            education and issued a fatwa prohibiting women from leaving their homes to visit graves. His works covered a wide range
+            of topics, including legal issues, religious reforms, and even scientific subjects like astronomy and mathematics. Imam
+            Ahmad Raza founded Manzar-e-Islam, an Islamic university in Bareilly, and was instrumental in introducing the Barelvi
+            school of thought, which emphasized love for the Prophet Muhammad (PBUH) and Sufism. His legacy continues, and he is
+            fondly remembered by titles such as A'la Hazrat, Imam Ahle Sunnat, and Hassan-ul-Hind. Every year, his death anniversary,
+            Yom-e-Raza, is observed with great respect on the 25th of Safar.</span><br>
+        </p>
+        <button onclick="myFunction()" id="myBtn" class="align-self-start cla">Read more-></button>
+      </div> 
+     <div class="tab">
+         <h3 class="text-start bord my-5">Teachers <i class="fa-beat-fade"
+            style="color: #5b716a;"> 📜</i></h3>
+      <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mirza Ghulam Qadir Baig Barelvi</td>
+                <td>1898</td>
+            </tr>
+            <tr>
+                <td>Father Mawlana Muhammad Naqi Ali Khan Barelvi</td>
+                <td>1880 (1297 AH)</td>
+            </tr>
+            <tr>
+                <td>Mawlana Abdul Ali Khan Rampuri</td>
+                <td>1885 (1303 AH)</td>
+            </tr>
+            <tr>
+                <td>Shah Abu al-Hussain Ahmad Noori Marahvi</td>
+                <td>1906 (1324 AH)</td>
+            </tr>
+            <tr>
+                <td>Mawlana Noor Ahmad Badauni</td>
+                <td>1301 AH</td>
+            </tr>
+            <tr>
+                <td>Shah Aal Rasul Marahvi</td>
+                <td>1879 (1297 AH)</td>
+            </tr>
+            <tr>
+                <td>Student of Shah Abdul Aziz Muhaddith Dehlvi</td>
+                <td>1239 AH</td>
+            </tr>
+            <tr>
+                <td>Imam Shafi'iyyah Shaykh Hussain Saleh</td>
+                <td>1884 (1306 AH)</td>
+            </tr>
+            <tr>
+                <td>Mufti Hanafiya Shaykh Abdul Rahman Siraj</td>
+                <td>1883 (1301 AH)</td>
+            </tr>
+            <tr>
+                <td>Mufti Shafi'iyyah Shaykh Ahmad bin Zaini Dihlani Makkah</td>
+                <td>1886 (1304 AH)</td>
+            </tr>
+            <tr>
+                <td>Qadi al-Qudat Haram Muhtaram</td>
+                <td>Not Provided</td>
+            </tr>
+        </tbody>
+    </table> </div>
+  <div class="tab2">
+     <h3 class="bord text-start  my-5">Allegiance and Caliphate <i class="fa-beat-fade"
+            style="color: #5b716a;"> ☪️</i></h3>
+    <table>
+    <thead>
+        <tr>
+            <th>Initiation and Succession</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Ahmad Raza, in 1877 (1294 AH), alongside his father Naqi Ali Khan, pledged allegiance to Shah Aal-e-Rasul Marahri (d. 1878) and was granted permission and succession in the Qadriya order.</td>
+        </tr>
+        <tr>
+            <td>Fazil Barelwi received initiation in the following spiritual orders:</td>
+        </tr>
+        <tr>
+            <td>Qadriya Barkatiya Jadeeda,</td>
+        </tr>
+        <tr>
+            <td>Qadriya Abaiya Qadeema,</td>
+        </tr>
+        <tr>
+            <td>Qadriya Razaqiya,</td>
+        </tr>
+        <tr>
+            <td>Qadriya Manooriya,</td>
+        </tr>
+        <tr>
+            <td>Chishtiya Nizamia Qadeema,</td>
+        </tr>
+        <tr>
+            <td>Qadriya Ahdaliya,</td>
+        </tr>
+        <tr>
+            <td>Chishtiya Mahbubiya Jadeeda,</td>
+        </tr>
+        <tr>
+            <td>Suharwardiya Fadila,</td>
+        </tr>
+        <tr>
+            <td>Naqshbandiya Alaiya Siddiqiya,</td>
+        </tr>
+        <tr>
+            <td>Naqshbandiya Alaiya Alawiya,</td>
+        </tr>
+        <tr>
+            <td>Badiya,</td>
+        </tr>
+        <tr>
+            <td>Alawiya Manamiya</td>
+        </tr>
+        <tr>
+            <td>In addition to the above-mentioned orders, Fazil Barelwi also received certification for the Four Salutations (Musafahat-e-Husniya, Musafahat-e-Omariyah, Musafahat-e-Khudriya, Musafahat-e-Mananiya).</td>
+        </tr>
+        <tr>
+            <td>Besides these initiations, Ahmad Raza Khan was also granted permission for various invocations, rituals, and practices, such as:</td>
+        </tr>
+        <tr>
+            <td>Khawas-ul-Quran, Asma-ul-Ilahiya, Dalael-ul-Khayrat, Hisn-ul-Haseen, Hizb-ul-Bahr, Sabz-al-Nasr, Hizr-al-Amin, Hizr-al-Yamani, Dua-e-Mughni, Dua-e-Haidari, Dua-e-Azraeli, Dua-e-Syriani, Qasida-e-Ghawthiya, Qasida-e-Burdah, and others.</td>
+        </tr>
+    </tbody>
+</table>
+
+  </div> 
+  <div class="books">
+        <h1 class="text-start my-4 border-bottom border-4 border-black">ABOUT</h1>
+   <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  </div>
 </div>
-<center>
-  <div class="cente">
-    <div class=" about my-5">
-     <h1 class="text-start  my-4  border-bottom border-4 border-black" >
-      ABOUT
-     </h1>
-     <h3 class="text-start my-5 ">Introduction <i class="fa-solid fa-address-card fa-beat-fade" style="color: #5b716a;"></i></h3>
-       <p class="text-start fs-4">
-Imam Ahmad Raza Khan (14th June 1856 – 28th October 1921) was a prominent religious scholar and reformer of the 20th century. He was a distinguished Hanafi jurist, hadith scholar, poet of Na'at, and an expert in both Islamic and rational sciences. He was also the leader of the Qadri Sufi Order and authored numerous works in Arabic, Persian, and Urdu. Some of his most famous writings include his renowned Quran translation "Kanzul Iman", the comprehensive legal work "Fatawa Razawiya", and his famous Na'at collection "Hadaiq Bakhshish".
-<br>
-Imam Ahmad Raza was a staunch defender of taqleed (following scholarly tradition) and the Hanafi school of thought. His scholarly journey led him to benefit from the works of revered scholars like Shah Waliullah and Abdul Haqq Dehlawi in the field of hadith. In fiqh, he was authorized by Sheikh Abdul Rahman Hanfi Makki, whose spiritual lineage traces back to Abdullah ibn Mas'ud.
-<br>
-He played a significant role in advocating the Two-Nation Theory and firmly rejected any form of Hindu-Muslim unity. He warned against such alliances, especially during movements like Tark-e-Muwalat and Khilafat Movement, which, according to him, were in conflict with Islamic principles. Imam Ahmad Raza was also a strong proponent of women's religious education and issued a fatwa prohibiting women from leaving their homes to visit graves.
-<br>
-His works covered a wide range of topics, including legal issues, religious reforms, and even scientific subjects like astronomy and mathematics. Imam Ahmad Raza founded Manzar-e-Islam, an Islamic university in Bareilly, and was instrumental in introducing the Barelvi school of thought, which emphasized love for the Prophet Muhammad (PBUH) and Sufism.
-<br>
-His legacy continues, and he is fondly remembered by titles such as A'la Hazrat, Imam Ahle Sunnat, and Hassan-ul-Hind. Every year, his death anniversary, Yom-e-Raza, is observed with great respect on the 25th of Safar.
-
-</p>   
-    </div>
   </div>
-</center>
+    </div>
+  </center>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 
+  <script>
+    function myFunction() {
+      var dots = document.getElementById("dots");
+      var moreText = document.getElementById("more");
+      var btnText = document.getElementById("myBtn");
+
+      if (dots.style.display === "none") {
+        dots.style.display = "inline";
+        btnText.innerHTML = "Read more";
+        moreText.style.display = "none";
+      } else {
+        dots.style.display = "none";
+        btnText.innerHTML = "Read less";
+        moreText.style.display = "inline";
+      }
+    }
+  </script>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
 </html>
