--- a/index.html
+++ b/index.html
@@ -217,11 +217,28 @@
 
   </div> 
   <div class="books">
-        <h1 class="text-start my-4 border-bottom border-4 border-black">ABOUT</h1>
+        <h1 class="text-start my-4 border-bottom border-4 border-black">book</h1>
    <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  <img src="./5.jpg" class="card-img-top" alt="...">
+  </div>
+<div class="card" style="width: 18rem;">
+  <img src="./4.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+  <img src="./6.jpg" class="card-img-top" alt="...">
+  </div>
+<div class="card" style="width: 18rem;">
+  <img src="./7.jpg" class="card-img-top" alt="...">
+  </div>
+<div class="card" style="width: 18rem;">
+  <img src="./8.jpg" class="card-img-top" alt="...">
+  </div>
+<div class="card" style="width: 18rem;">
+  <img src="./9.jpg" class="card-img-top" alt="...">
+  </div>
+<div class="card" style="width: 18rem;">
+  <img src="./10.jpg" class="card-img-top" alt="...">
   </div>
 </div>
   </div>
