--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
 </table>
 
   </div> 
-  <div class="books">
+  <div class="books_hero">
         <h1 class="text-start my-4 border-bottom border-4 border-black">book</h1>
-   <div class="card" style="width: 18rem;">
+         <div class="books">
+        <div class="card" style="width: 18rem;">
   <img src="./5.jpg" class="card-img-top" alt="...">
   </div>
 <div class="card" style="width: 18rem;">
@@ -240,6 +241,7 @@
 <div class="card" style="width: 18rem;">
   <img src="./10.jpg" class="card-img-top" alt="...">
   </div>
+</div>
 </div>
   </div>
     </div>
