--- a/index.html
+++ b/index.html
@@ -219,26 +219,26 @@
   <div class="books_hero">
         <h1 class="text-start my-4 border-bottom border-4 border-black">book</h1>
          <div class="books">
-        <div class="card" style="width: 18rem;">
+        <div class="card" >
   <img src="./5.jpg" class="card-img-top" alt="...">
   </div>
-<div class="card" style="width: 18rem;">
+<div class="card">
   <img src="./4.jpg" class="card-img-top" alt="...">
   </div>
   
-<div class="card" style="width: 18rem;">
+<div class="card">
   <img src="./6.jpg" class="card-img-top" alt="...">
   </div>
-<div class="card" style="width: 18rem;">
+<div class="card" >
   <img src="./7.jpg" class="card-img-top" alt="...">
   </div>
-<div class="card" style="width: 18rem;">
+<div class="card" >
   <img src="./8.jpg" class="card-img-top" alt="...">
   </div>
-<div class="card" style="width: 18rem;">
+<div class="card">
   <img src="./9.jpg" class="card-img-top" alt="...">
   </div>
-<div class="card" style="width: 18rem;">
+<div class="card">
   <img src="./10.jpg" class="card-img-top" alt="...">
   </div>
 </div>
