--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
   </div> 
   <div class="books_hero">
-        <h1 class="text-start my-4 border-bottom border-4 border-black">book</h1>
-         <div class="books">
+        <h1 class="text-start my-4 border-bottom border-4 border-black">book<i class="fa-beat-fade"
+            style="color: #5b716a;">📚</i></h1>
+        <div class="books">
         <div class="card" >
   <img src="./5.jpg" class="card-img-top" alt="...">
   </div>
