--- a/index.html
+++ b/index.html
@@ -238,18 +238,26 @@
         <h1 class="text-start my-4 border-bottom border-4 border-black">Speeches <i class="fa-beat-fade"
             style="color: #5b716a;">🎙️</i></h1>
         <!-- From Uiverse.io by alexruix -->
-        <div class="card">
-          <iframe class="card-details" src="https://www.youtube.com/embed/Rb2jqWaEcU0" frameborder="0"
+        <div class="cerd">
+          <iframe class="cerd-details" src="https://www.youtube.com/embed/Rb2jqWaEcU0" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h4>
             Maulana Ilyas Qadri</h4>
 
         </div>
-        <div class="card">
-<iframe  class="card-details" src="https://www.youtube.com/embed/HkQ-82R7Bvk"frameborder="0"
+        <div class="cerd">
+<iframe  class="cerd-details" src="https://www.youtube.com/embed/HkQ-82R7Bvk"frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h6> Dr Muhammad Ashraf Asif Jalali</h4>
           </div>
+        <div class="cerd">
+          <iframe class="cerd-details" src="https://www.youtube.com/embed/ui9zBgO-CIE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h6>
+Maulana Imran Attari</h4>
+          </div>
+
+
+
         <div id="books" class="books_hero">
           <h1 class="text-start my-4 border-bottom border-4 border-black">book<i class="fa-beat-fade"
               style="color: #5b716a;">📚</i></h1>
