--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#books">Books</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Beliefs</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -234,68 +231,128 @@
         </table>
 
       </div>
-      <div id="Speeches">
-        <h1 class="text-start my-4 border-bottom border-4 border-black">Speeches <i class="fa-beat-fade"
-            style="color: #5b716a;">🎙️</i></h1>
-        <!-- From Uiverse.io by alexruix -->
+   <div id="Speeches">
+    <h1 class="text-start my-4 border-bottom border-4 border-black">
+        Speeches <i class="fa-beat-fade" style="color: #5b716a;">🎙️</i>
+    </h1>
+    <div class="cerds">
         <div class="cerd">
-          <iframe class="cerd-details" src="https://www.youtube.com/embed/Rb2jqWaEcU0" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h4>
-            Maulana Ilyas Qadri</h4>
-
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/Rb2jqWaEcU0" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6>Maulana Ilyas Qadri</h6>
         </div>
         <div class="cerd">
-<iframe  class="cerd-details" src="https://www.youtube.com/embed/HkQ-82R7Bvk"frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h6> Dr Muhammad Ashraf Asif Jalali</h4>
-          </div>
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/HkQ-82R7Bvk" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6>Dr Muhammad Ashraf Asif Jalali</h6>
+        </div>
         <div class="cerd">
-          <iframe class="cerd-details" src="https://www.youtube.com/embed/ui9zBgO-CIE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h6>
-Maulana Imran Attari</h4>
-          </div>
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/ui9zBgO-CIE" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6>Maulana Imran Attari</h6>
+        </div>
+        <div class="cerd">
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/SCIuP4slRho" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6>Haji Azhar Attari</h6>
+        </div>
+        <div class="cerd">
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/EqBMyANT3j4" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6> Muhammad Ajmal Raza Qadri</h6>
+        </div>
+        <div class="cerd">
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/W3f-wmqcgfU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6> Muhammad Raza SaQib Mustafai</h6>
+        </div>
+        <div class="cerd">
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/Qg9mBGSWcRg" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6>Abdul Habib Attari</h6>
+        </div>
+        <div class="cerd">
+            <iframe class="cerd-details" src="https://www.youtube.com/embed/tcrjL527lNo" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h6>Haji Shahid Attari</h6>
+        </div>
+    </div>
+</div>
 
+        <div id="books" class="books-hero">
+  <h1 class="text-start my-4 border-bottom border-4 border-black">Books <i class="fa-beat-fade" style="color: #5b716a;">📚</i></h1>
+  <div class="books">
+    <div class="card">
+      <img src="./5.jpg" class="card-img-top" alt="Book 1">
+    </div>
+    <div class="card">
+      <img src="./4.jpg" class="card-img-top" alt="Book 2">
+    </div>
+    <div class="card">
+      <img src="./6.jpg" class="card-img-top" alt="Book 3">
+    </div>
+    <div class="card">
+      <img src="./7.jpg" class="card-img-top" alt="Book 4">
+    </div>
+    <div class="card">
+      <img src="./8.jpg" class="card-img-top" alt="Book 5">
+    </div>
+    <div class="card">
+      <img src="./9.jpg" class="card-img-top" alt="Book 6">
+    </div>
+    <div class="card">
+      <img src="./10.jpg" class="card-img-top" alt="Book 7">
+    </div>
+    <div class="card">
+      <img src="./11.jpg" class="card-img-top" alt="Book 8">
+    </div>
+    <div class="card">
+      <img src="./12.jpg" class="card-img-top" alt="Book 9">
+    </div>
+  </div>
+</div>
 
-
-        <div id="books" class="books_hero">
-          <h1 class="text-start my-4 border-bottom border-4 border-black">book<i class="fa-beat-fade"
-              style="color: #5b716a;">📚</i></h1>
-          <div class="books">
-            <div class="card">
-              <img src="./5.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./4.jpg" class="card-img-top" alt="...">
-            </div>
-
-            <div class="card">
-              <img src="./6.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./7.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./8.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./9.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./10.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./11.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card">
-              <img src="./12.jpg" class="card-img-top" alt="...">
-            </div>
-
-          </div>
+      </div>
+  </center>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5>About Us</h5>
+        <p>Imam Ahmad Raza Khan was a renowned Islamic scholar, famous for his contributions to religious education, jurisprudence, and spiritual guidance.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Quick Links</h5>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#Speeches">Speeches</a></li>
+          <li><a href="#books">Books</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5>Contact</h5>
+        <ul>
+          <li><strong>Phone:</strong> +92 331 830 0294</li>
+          <li><strong>Email:</strong><a href="mailto:kadeemattar@gmail.com">
+  <iframe class="cerd-details" src="https://www.youtube.com/embed/tcrjL527lNo" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</a></li>
+          <li><strong>Address:</strong> Bareilly, India</li>
+        </ul>
+        <div class="social-icons">
+          <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+          <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
         </div>
       </div>
     </div>
-  </center>
+    <div class="text-center mt-4">
+      <p>&copy; 2025 Raza Knowledge. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
