icons , map , wattsap

--- a/index.html
+++ b/index.html
@@ -333,18 +333,12 @@
       <div class="col-md-4">
         <h5>Contact</h5>
         <ul>
-          <li><strong>Phone:</strong> +92 331 830 0294</li>
-          <li><strong>Email:</strong><a href="mailto:kadeemattar@gmail.com">
-  <iframe class="cerd-details" src="https://www.youtube.com/embed/tcrjL527lNo" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</a></li>
-          <li><strong>Address:</strong> Bareilly, India</li>
+          <li><strong>Phone:</strong> <a href="https://wa.me/923318300294">+92 331 830 0294</a> </li>
+          <li><strong>Email:</strong> <a href="https://mail.google.com/mail/u/0/#inbox">khadeemattar@gmail.com</a></li>
+          <li><strong>Address:</strong> <a href="https://maps.app.goo.gl/7tuA57xWecUfsUkh7" target="_blank">Bareilly, India</a></li>
         </ul>
         <div class="social-icons">
-          <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-          <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-          <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-          <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
+          <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
       </div>
     </div>
