--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raza 🌙 Knowledge</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -22,7 +26,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand fs-2 text-light" href="#">Imam of Ahl-e-Sunnat</a>
+        <a class="navbar-brand fs-2 text-light animate__slideInDown " href="#">Imam of Ahl-e-Sunnat</a>
         <ul class="fs-5 navbar-nav mx-5 me-auto mb-2 mb-lg-0 gap-5">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -50,7 +54,10 @@
         <img src="./1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./2.jpg" class="d-block w-100" alt="...">
+        <img src="./00.jpg" class="d-block w-100" alt="...">
+      </div>
+            <div class="carousel-item">
+        <img src="./3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -68,7 +75,7 @@
   <center>
     <div class="cente">
       <div id="about" class="about my-5">
-        <h1 class="text-start my-4 border-bottom border-4 border-black">ABOUT</h1>
+        <h1 class=" text-start my-4 border-bottom border-4 border-black">ABOUT</h1>
         <h3 class="text-start bord my-5">Introduction <i class="fa-solid fa-address-card fa-beat-fade"
             style="color: #5b716a;"></i></h3>
         <p class="text-start fs-4">
@@ -103,7 +110,7 @@
         </p>
         <button onclick="myFunction()" id="myBtn" class="align-self-start cla">Read more-></button>
       </div>
-      <div class="tab">
+      <div class="tab ">
         <h3 class="text-start bord my-5">Teachers <i class="fa-beat-fade" style="color: #5b716a;"> 📜</i></h3>
         <table>
           <thead>
@@ -371,6 +378,22 @@
         moreText.style.display = "inline";
       }
     }
+   // Intersection Observer
+const observer = new IntersectionObserver((entries, observer) => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add("animate");
+      observer.unobserve(entry.target);
+    }
+  });
+}, { threshold: 0.5 });
+
+// Observe multiple classes (cards and other elements)
+document.querySelectorAll('.card, .cerd').forEach(element => {
+  observer.observe(element);
+});
+
+
   </script>
 
 </body>
